--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 title: Nugujeyong's Projects
 description: Hello there
-url: https://nugujeyong.github.io/
+url: https://nugujeyong.github.io
